apps/catbox/overlays/telsha-tailnet/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catbox
  annotations:
    tailscale.com/hostname: catbox
    tailscale.com/tags: tag:catbox
spec:
  loadBalancerClass: tailscale
