apps/catbox/overlays/telsha-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catbox-tailscale
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catbox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: ssh
        - port: mdns
          protocol: UDP
