apps/catbox/overlays/telsha-tailnet/patch-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catbox
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: ssh
          protocol: TCP
        - port: mdns
          protocol: UDP
